--- a/protochain/package.json
+++ b/protochain/package.json
@@ -7,17 +7,24 @@
     "test": "jest",
     "build": "npx tsc",
     "start": "node ./dist/blockchain.js",
-    "dev": "nodemon --watch './src' --exec 'ts-node ./src/index.ts' -e ts"
+    "dev": "nodemon --watch './src' --exec 'ts-node ./src/index.ts' -e ts",
+    "blockchain": "ts-node ./src/server/blockchainServer.ts"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@types/express": "^4.17.17",
     "@types/jest": "^29.5.4",
+    "@types/morgan": "^1.9.5",
     "jest": "^29.6.3",
     "nodemon": "^3.0.1",
     "ts-jest": "^29.1.1",
     "ts-node": "^10.9.1",
     "typescript": "^5.1.6"
+  },
+  "dependencies": {
+    "express": "^4.18.2",
+    "morgan": "^1.10.0"
   }
 }
