--- a/protochain/package.json
+++ b/protochain/package.json
@@ -8,7 +8,7 @@
     "build": "npx tsc",
     "start": "node ./dist/blockchain.js",
     "dev": "nodemon --watch './src' --exec 'ts-node ./src/index.ts' -e ts",
-    "blockchain": "ts-node ./src/server/blockchainServer.ts"
+    "blockchain": "ts-node ./src/server/blockchainServer.ts --run"
   },
   "keywords": [],
   "author": "",
@@ -17,8 +17,10 @@
     "@types/express": "^4.17.17",
     "@types/jest": "^29.5.4",
     "@types/morgan": "^1.9.5",
+    "@types/supertest": "^2.0.12",
     "jest": "^29.6.3",
     "nodemon": "^3.0.1",
+    "supertest": "^6.3.3",
     "ts-jest": "^29.1.1",
     "ts-node": "^10.9.1",
     "typescript": "^5.1.6"
