--- a/protochain/package.json
+++ b/protochain/package.json
@@ -8,7 +8,8 @@
     "build": "npx tsc",
     "start": "node ./dist/blockchain.js",
     "dev": "nodemon --watch './src' --exec 'ts-node ./src/index.ts' -e ts",
-    "blockchain": "ts-node ./src/server/blockchainServer.ts --run"
+    "blockchain": "ts-node ./src/server/blockchainServer.ts --run",
+    "miner": "ts-node ./src/client/minerClient.ts"
   },
   "keywords": [],
   "author": "",
@@ -26,6 +27,7 @@
     "typescript": "^5.1.6"
   },
   "dependencies": {
+    "axios": "^1.5.0",
     "express": "^4.18.2",
     "morgan": "^1.10.0"
   }
