--- a/protochain/package.json
+++ b/protochain/package.json
@@ -28,6 +28,7 @@
   },
   "dependencies": {
     "axios": "^1.5.0",
+    "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "morgan": "^1.10.0"
   }
